# cytnx-core

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  Storage.hpp  pyproject.toml  sync.sh
.github/workflows/: clang.yml  publish.yml
src/: main.cpp
src/cpp/include/: test.hpp
src/cpp/include/cytnx_core/: Device.hpp  Type.hpp  cytnx_core.hpp  test.hpp
src/cpp/include/cytnx_core/errors/: base.hpp  cuda.hpp  cytnx_error.hpp
src/cpp/include/cytnx_core/storage_impl/: Storage_impl.hpp
src/cpp/pybind/: main.cpp
src/cpp/src/: CMakeLists.txt  Device.cpp  Type.cpp  test.cpp
src/cpp/src/stoarge_impl/: CMakeLists.txt  StorageImplementation.cpp  Storage_base.cpp
src/cpp/src/utils_internal/: CMakeLists.txt
src/cpp/src/utils_internal/cpu/: Alloc_cpu.hpp  CMakeLists.txt
src/cytnx_core/: __init__.py  _core.pyi
test/: test_simple.py
